Enhance Home Assistant add-on structure and fix s6-overlay init
- Fix s6-overlay-suexec error by adding proper ENTRYPOINT [/init] to Dockerfile
- Add comprehensive DOCS.md for configuration documentation
- Add AppArmor security profile (disabled by default)
- Update config.yaml with image, url, and proper metadata
- Rationalize README.md vs DOCS.md per Home Assistant standards
- Bump version to 0.1.2
- Disable AppArmor temporarily for initial deployment

--- a/ws-discovery/Dockerfile
+++ b/ws-discovery/Dockerfile
@@ -47,3 +47,6 @@ LABEL \
     org.opencontainers.image.created=${BUILD_DATE} \
     org.opencontainers.image.revision=${BUILD_REF} \
     org.opencontainers.image.version=${BUILD_VERSION}
+
+# Set the entrypoint and command for s6-overlay
+ENTRYPOINT ["/init"]
